# agentcore

./: Dockerfile  README.md  pyproject.toml
src/agentcore/: __init__.py  __main__.py  middleware.py  runtime.py  tokenizer.py
src/agentcore/agents/: __init__.py  manager.py
src/agentcore/config/: __init__.py  defaults.py  loader.py  schema.py
src/agentcore/context/: __init__.py  caching.py  engine.py  sources.py
src/agentcore/core/: __init__.py  adapter.py  engine.py  message.py  providers.py  session.py  session_store.py  stats.py
src/agentcore/delivery/: __init__.py  channel.py
src/agentcore/events/: __init__.py  bus.py
src/agentcore/hooks/: __init__.py  manager.py  types.py
src/agentcore/mcp/: __init__.py  adapter.py  client.py  manager.py  protocol.py  transport.py
src/agentcore/models/: __init__.py  anthropic.py  base.py  capabilities.py  events.py  local.py  openai.py  registry.py
src/agentcore/plugins/: __init__.py  base.py  manager.py  manifest.py
src/agentcore/prompts/: __init__.py  builder.py  context.py  template.py
src/agentcore/resilience/: __init__.py  fallback.py  retry.py
src/agentcore/tools/: __init__.py  pipeline.py  policy.py  registry.py  repair.py  result.py  retry.py
src/agentcore/utils/: __init__.py  retry.py  run_loop.py
src/agentcore/wire/: __init__.py  base.py  chat_completions.py  responses.py  types.py
tests/: test_contract_context.py  test_contract_mcp.py  test_contract_models.py  test_contract_pipeline.py  test_contract_tools.py
