[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore"
dynamic = ["version"]
description = "Atomic agent engine — configurable AI models, prompts, plugins, hooks, tools"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AgentCore Contributors" }]
readme = "README.md"
dependencies = [
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
agentcore = "agentcore.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "agentcore.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
